--- a/Interfaces/PrimerJavaFX/src/primerjavafx/Pantalla.form
+++ b/Interfaces/PrimerJavaFX/src/primerjavafx/Pantalla.form
@@ -211,6 +211,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Pasar texto al label"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="340" y="148" width="180" height="30"/>
